Update form to track time
- Improve form styling
- Add new fields: tasks, notes
- Fix logic to submit form
- Add loading state
- Add logic to fetch all tasks
- Improve rendering elements in Form component

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 .App {
   text-align: center;
-  height: 20rem;
   width: 30rem;
-  background: yellow;
+  background: var(--white);
   font-size: 1rem;
   color: var(--heavy-metal);
-  padding: 2rem;
+  padding: 1rem;
 }
 
 
