--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,11 +1,20 @@
 .Form {
   display: grid;
-  row-gap: 2rem;
+  column-gap: 0.5rem;
+  row-gap: 0.5rem;
   grid-auto-rows: min-content;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   height: 100%;
 
-  .input {
-    padding: 0.5rem;
-    width: 100%;
+  > * {
+    grid-column: span 2 / span 2;
+  }
+
+  .small-width {
+    grid-column: span 1 / span 1;
+  }
+
+  .submit-btn {
+    margin-top: 1rem;
   }
 }
