--- a/src/components/select/Select.css
+++ b/src/components/select/Select.css
@@ -1,19 +1,11 @@
-.select {
+.select-container {
   position: relative;
   width: 100%;
 }
 
 .select-button,
 .list {
-  background: var(--white);
-  border-color: var(--heavy-metal-15);
-  border-radius: 0.25rem;
-  border-style: solid;
-  border-width: 1px;
   cursor: pointer;
-  font-size: 0.8rem;
-  padding: 0.5rem;
-  text-align: left;
   width: inherit;
 }
 
