--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -5,6 +5,7 @@
   grid-auto-rows: min-content;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   height: 100%;
+  padding: 1rem;
 
   > * {
     grid-column: span 2 / span 2;
