--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
-  --heavy-metal: #1D1E1C;
+  --heavy-metal: #1d1e1c;
   --heavy-metal-15: rgba(29, 30, 28, 0.15);
+  --heavy-metal-70: rgba(29, 30, 28, 0.7);
   --jewel: #188433;
   --white: #fff;
 }
